# PGkPr

./: .gitignore  App.h  App2.h  CMakeLists.txt  main.cpp
dependeces/Common/: Loader.h  OBJ_Loader.h  quickSort.h
dependeces/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
resources/: Skybox.h  cube.mtl  kula.max  kula.mtl  skyBox.mtl  terrain.mtl
shaders/: GameObjectFrag.glsl  GameObjectVert.glsl  MyShader.fragmentshader  ParticleFrag.glsl  ParticleVert.glsl  StandardShading.fragmentshader  myShader2.fragmentshader  skyboxFrag.glsl  skyboxVert.glsl
src/Camera/: Camera.cpp  Camera.h
src/Engine/: Component.h  Frame.cpp  Frame.h  Loader.h  MouseListener.h
src/GameObject/: GameObject.cpp  GameObject.h
src/Laby/: ParticleSystem.h  Particles.cpp  Particles.h
src/ParticleSystem/: Effects.h  Particle.h  ParticleSystem.h
src/RenderableObject/: RenderableObject.cpp  RenderableObject.h  Skybox.cpp  Skybox.h
src/Scene/: Scene.h
src/Scenes/: Fog.h  Key.h  Lab02.h  Rain.h  Smoke.h
src/UI/: DialogLightSettings.cpp  DialogLightSettings.h  DialogModelSelection.cpp  DialogModelSelection.h  DialogObjectProp.cpp  DialogObjectProp.h  DialogParticleSystem.cpp  DialogParticleSystem.h  UI.cpp  UI.h
